--- a/nodejs/tsconfig.json
+++ b/nodejs/tsconfig.json
@@ -1,17 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
     "target": "es6",
-    "noImplicitAny": true,
+    "strict": true,
     "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitAny": true,
     "sourceMap": true,
     "outDir": "dist",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    }
   },
   "include": ["src/**/*"]
 }
