--- a/.github/workflows/publish-node.yaml
+++ b/.github/workflows/publish-node.yaml
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
+      - run: cd nodejs
       - name: Install modules
         run: yarn install
 #      - name: Test
