--- a/.github/workflows/test-node.yaml
+++ b/.github/workflows/test-node.yaml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
+      - run: cd nodejs
       - name: Install modules
         run: yarn
       - name: Run tests
