ci: nodejs for workdir

--- a/.github/workflows/publish-node.yaml
+++ b/.github/workflows/publish-node.yaml
@@ -28,6 +28,10 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./nodejs
+
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node
