--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -6,5 +6,15 @@
   "dependencies": {
     "@100mslive/server-sdk": "^0.0.1"
   },
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "cjs": "node cjs/index.cjs",
+    "esm": "node esm/index.js",
+    "ts": "ts-node ts/index.ts"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.36",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.7.2"
+  }
 }
