--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -8,6 +8,7 @@
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "dotenv": "^16.0.1",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^28.1.0",
@@ -39,6 +40,7 @@
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.js",
   "dependencies": {
+    "axios": "^0.27.2",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2",
     "winston": "^3.7.2"
