--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@100mslive/server-sdk": "^0.0.12"
+    "@100mslive/server-sdk": "^0.1.0-alpha"
   },
   "type": "module",
   "scripts": {
