feat: configure types to support in package

--- a/nodejs/tsconfig.json
+++ b/nodejs/tsconfig.json
@@ -8,6 +8,7 @@
     "noImplicitAny": true,
     "sourceMap": true,
     "outDir": "dist",
+    "declaration": true
   },
   "include": ["src/**/*"]
 }
