--- a/.github/workflows/test-node-new.yml
+++ b/.github/workflows/test-node-new.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 100mslive/go-sdk
-          token: ${{ GH_ACCESS_TOKEN }}
+          token: ${{ env.GH_ACCESS_TOKEN }}
           
       - name: Set up Go
         uses: actions/setup-go@v4
