--- a/.github/workflows/test-node-new.yml
+++ b/.github/workflows/test-node-new.yml
@@ -12,6 +12,7 @@ on:
 jobs:   
   test:
     runs-on: ${{ matrix.os }}
+    
     env:
       GOPRIVATE: github.com/brytecam/*,github.com/100mslive/*
       GH_ACCESS_TOKEN: ${{ secrets.DOCKER_GIT_TOKEN }}
@@ -21,6 +22,10 @@ jobs:
         os:
           - ubuntu-latest
         node: [16.x]
+        
+    defaults:
+      run:
+        working-directory: ./nodejs
         
     steps:
       - name: Checkout this repo
@@ -33,7 +38,6 @@ jobs:
           
       - name: Install modules
         run: yarn
-        working-directory: ./nodejs
         
       - name: Checkout go-sdk repo
         uses: actions/checkout@v2
@@ -85,7 +89,6 @@ jobs:
         
       - name: Run tests
         run: yarn test
-        working-directory: nodejs
         env:
           HMS_ACCESS_KEY: ${{ secrets.HMS_ACCESS_KEY }}
           HMS_SECRET: ${{ secrets.HMS_SECRET }}
