--- a/.github/workflows/test-node-new.yml
+++ b/.github/workflows/test-node-new.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           repository: 100mslive/go-sdk
           token: ${{ env.GH_ACCESS_TOKEN }}
+          path: go-sdk
           
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -39,6 +40,7 @@ jobs:
         run: |
           git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           make prep-gh
+        working-directory: go-sdk
           
       - name: Set populate-room config
         run: |
@@ -63,11 +65,13 @@ jobs:
                   "output": ""
               }
           }' > config.json
+        working-directory: go-sdk
 
       - name: Start populate-room
         run: |
           make loadtest &
           populate_room_pid=$!
+        working-directory: go-sdk
         
       - name: Checkout this repo
         uses: actions/checkout@v2
