feat: seperate jest step in gh actions

--- a/.github/workflows/test-node.yml
+++ b/.github/workflows/test-node.yml
@@ -48,8 +48,45 @@ jobs:
         run: |
           git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           make prep-gh
-        working-directory: go-sdk
+        working-directory: ./go-sdk
+
+      - name: Populate Room
+        run: |
+          ls -la
+          echo -n '{
+              "url": "' > config.json
+          echo -n "$TEST_MEETING_URL" >> config.json
+          echo '",
+              "duration": 600,
+              "count": 3,
+              "subscribe_max_video": {
+                  "high": 1,
+                  "medium": 5,
+                  "low": 0,
+                  "priority": [
+                      "medium",
+                      "high"
+                  ]
+              },
+              "subscribe_max_audio": 0,
+              "join_rate": 5,
+              "logger": {
+                  "level": "panic",
+                  "console_events": true,
+                  "output": ""
+              }
+          }' >> config.json
+          cat config.json
+          make loadtest &
+          populate_room_pid=$!
+          sleep 100
+          echo "started load-test pid=$populate_room_pid"
+        working-directory: ./go-sdk
 
       - name: Run tests
         run: |
-          bash -x run-test.sh
+          yarn test
+        working-directory: ./nodejs
+
+      - name: Stop populate room
+        run: kill $populate_room_pid
