--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "go-sdk"]
-	path = ./.github/populate-room
+[submodule "populate-room"]
+	path = .github/populate-room
 	url = https://github.com/100mslive/go-sdk
