--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@100mslive/server-sdk": "0.3.2-alpha"
+    "@100mslive/server-sdk": "0.3.0"
   },
   "type": "module",
   "scripts": {
